--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (SECURITY: Never commit!)
+.env
+.env.local
+.env.production.local
+.env.development.local
+.env.test.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +29,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+nul
